--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -48,18 +48,18 @@
 	 <servlet>
 	     <servlet-name>FacesServlet</servlet-name>
 	     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-	    <load-on-startup>0</load-on-startup>
+	    <load-on-startup>1</load-on-startup>
 	 </servlet>
 
 	 <servlet-mapping>
 	    <servlet-name>FacesServlet</servlet-name>
-	    <url-pattern>*.jsf</url-pattern>
+	    <url-pattern>*.xhtml</url-pattern>
 	 </servlet-mapping>
 
-    <!--<welcome-file-list>-->
-        <!--<welcome-file>index.xhtml</welcome-file>-->
-        <!--<welcome-file>index.jsp</welcome-file>-->
-    <!--</welcome-file-list>-->
+    <welcome-file-list>
+        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
 
