--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app metadata-complete="false" version="3.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+<web-app metadata-complete="false" version="3.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xmlns="http://java.sun.com/xml/ns/javaee"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-	<display-name>Test</display-name>
+	<display-name>SurfaceInspector</display-name>
 	<distributable />
 
 	<listener>
@@ -51,12 +53,12 @@
 	    <load-on-startup>1</load-on-startup>
 	 </servlet>
 
-	 <servlet-mapping>
+	<servlet-mapping>
 	    <servlet-name>FacesServlet</servlet-name>
 	    <url-pattern>*.xhtml</url-pattern>
 	 </servlet-mapping>
 
-    <welcome-file-list>
+	<welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
