adding camera to server side

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 
     <context-param>
 	 	<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
-	 <param-value>true</param-value>
+	 	<param-value>true</param-value>
     </context-param>
 
     <context-param>
@@ -57,7 +57,17 @@
 	    <servlet-name>FacesServlet</servlet-name>
 	    <url-pattern>*.xhtml</url-pattern>
 	 </servlet-mapping>
-
+	<!--PrimeFaces Push-->
+	<!--<servlet>-->
+		<!--<servlet-name>Push Servlet</servlet-name>-->
+		<!--<servlet-class>org.primefaces.push.PushServlet</servlet-class>-->
+		<!--<async-supported>true</async-supported>-->
+	<!--</servlet>-->
+	<!--<servlet-mapping>-->
+		<!--<servlet-name>Push Servlet</servlet-name>-->
+		<!--<url-pattern>/primepush/*</url-pattern>-->
+	<!--</servlet-mapping>-->
+	<!---->
 	<welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
         <welcome-file>index.jsp</welcome-file>
