--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,6 @@
 			<artifactId>jetty-webapp</artifactId>
 			<version>9.4.4.v20170414</version>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>apache-jsp</artifactId>
-			<version>9.4.4.v20170414</version>
-		</dependency>
 		<!-- JSF -->
 		<dependency>
 			<groupId>com.sun.faces</groupId>
@@ -76,7 +71,24 @@
 			<artifactId>javax.el</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-
+		<!--For PrimeFaces Push !!! -->
+		<dependency>
+			<groupId>org.atmosphere</groupId>
+			<artifactId>atmosphere-runtime</artifactId>
+			<version>2.4.9</version>
+		</dependency>
+		<!-- For Atmosphere annotation-->
+		<!--<dependency>-->
+			<!--<groupId>eu.infomas</groupId>-->
+			<!--<artifactId>annotation-detector</artifactId>-->
+			<!--<version>3.0.5</version>-->
+		<!--</dependency>-->
+		<!--WEB CAM-->
+		<dependency>
+			<groupId>com.github.sarxos</groupId>
+			<artifactId>webcam-capture</artifactId>
+			<version>0.3.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
