--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -80,10 +80,10 @@
         <servlet-name>Push Servlet</servlet-name>
         <url-pattern>/primepush/*</url-pattern>
      </servlet-mapping>
-	<context-param>
-		<param-name>primefaces.PUSH_SERVER_URL</param-name>
-		<param-value>http://localhost:8080</param-value>
-	</context-param>
+	<!--<context-param>-->
+		<!--<param-name>primefaces.PUSH_SERVER_URL</param-name>-->
+		<!--<param-value>http://localhost:8080</param-value>-->
+	<!--</context-param>-->
 		<!---->
 	<welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
