--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,13 @@
 	<dependencies>
 		<!-- JETTY -->
 		<dependency>
-			<groupId>org.eclipse.jetty.aggregate</groupId>
-			<artifactId>jetty-all</artifactId>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>9.4.5.v20170502</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.websocket</groupId>
+			<artifactId>javax-websocket-server-impl</artifactId>
 			<version>9.4.5.v20170502</version>
 		</dependency>
 		<!-- JSF -->
