--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,12 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, LogController
 
 # Log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# Log to LogController
+log4j.appender.LogController=by.cs.web.bean.LogController
+log4j.appender.LogController.layout=org.apache.log4j.PatternLayout
+log4j.appender.LogController.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
